--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"node": "14.16.0"
 	},
 	"scripts": {
-		"start": "NODE_ENV=production node index.js",
+		"start": "node index.js",
 		"backend": "NODE_ENV=development nodemon index.js",
 		"build": "cd client && npm install && npm run build",
 		"frontend": "npm run front --prefix client",
